<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Join &amp; Play</string>
    <string name="id_banner">ca-app-pub-2926234763097056/9126206725</string>
    <string name="alerta_cidade">Escolha uma cidade</string>
    <string name="alerta_convite">Não foi possível convidar seus amigos :(</string>
    <string name="alerta_nome">Dê um nome ao evento</string>
    <string name="alerta_bairro">Escolha um bairro</string>
    <string name="alerta_rua">Escolha uma avenida/rua</string>
    <string name="alerta_endereco">Escolha um endereço válido</string>
    <string name="alerta_esporte">Escolha o esporte</string>
    <string name="alerta_lugar">Diga o nome do local</string>
    <string name="alerta_erro">Erro na criação do evento!</string>
    <string name="hint_cria3">Nome do local</string>
    <string name="hint_cria2">Endereço do local</string>
    <string name="hint_cria1">Escolha um esporte</string>
    <string name="convide">Convide um amigo!</string>
    <string name="data_evento">Data do evento</string>
    <string name="convidados">Convidados</string>
    <string name="particular">Particular</string>
    <string name="publico">Público</string>
    <string name="privacidade">Privacidade</string>
    <string name="escolha_nomeEvento">Escolha um nome para o evento</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="hint_pesq1">Escolha os esportes</string>
    <string name="hint_pesq2">Bairro</string>
    <string name="hint_pesq3">Cidade</string>
    <string name="hint_pesq4">Avenida ou rua</string>
    <string name="hint_pesq5">Nome do local</string>
    <string name="local">Local</string>
    <string name="data">A partir de</string>
    <string name="inicio">A partir de</string>
    <string name="data_default">12 a 15</string>
    <string name="time_default">12:00</string>
    <string name="mes_default">Maio</string>
    <string name="pago">Eventos pagos</string>
    <string name="sim">Sim</string>
    <string name ="nao">Não</string>
    <string name="teste">Teste</string>
    <string name="perfil_nome_usuario"> </string>
    <string name="perfil_mensagens">Mensagens</string>
    <string name="perfil_quantidade_amigos">10 amigos</string>
    <string name="perfil_eventos_anteriores">Eventos anteriores</string>
    <string name="perfil_idade_usario">20 anos</string>
    <string name="perfil_nota_usuario">Nota: </string>
    <string name="perfil_quantidade_partidas">Partidas: 20</string>
    <string name="perfil_nao">Não</string>
	<string name="perfil_sim">Sim</string>
	<string name="perfil_notificacoes">Notificações: </string>
    <string name="id_do_face" >697691156964434</string>
    <string name="id_do_maps">AIzaSyBODfARx4GaCbksQPHu4RJhaDTLWXsDeYA</string>
    <string name="proximidades">Proximidades</string>
    <string name="esportes">Esportes</string>
    <string name="termino">até</string>
    <string name="escolha_data">Data</string>
    <string name="confirmaram">Confirmaram</string>
    <string name="no_local">no local</string>
    <string name="participar">Participar</string>
    <string name="como_chegar">Como chegar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="futebol">Futebol</string>
    <string name="sobre">Sobre</string>
    <string name="iniciar_jogo">Iniciar Jogo</string>
    <string name="comentarios">Comentários</string>
    <string name="adicionar_comentario">Adicionar Comentário</string>
    <string name="perfil_gente_boa">Gente Boa</string>
    <string name="perfil_esforcado">Esforçado</string>
    <string name="perfil_joga_pro_time">Joga pro Time</string>
    <string name="perfil_fair_play">Fair Play</string>
    <string name="perfil_nivel_do_jogador">Nível do jogador:</string>
    <string name="perfil_partidas_jogadas"> partidas jogadas </string>
    <string name="perfil_nome_esporte">Futebol</string>
    <string name="esporte">Esporte</string>
    <string name="horario">Horário</string>
    <string name="preco">Preço</string>
    <string name="preco_nulo">0.00</string>
    <string name="selecione_local">Selecione o local desejado</string>
	<string name="hora">Hora</string>
    <string name="por_hora">por hora</string>
    <string name="unidade_preco">R$</string>
    <string name="nome_evento">Nome do evento</string>
    <string name="perfil_button_num_amigos">Amigos</string>
    <string name="perfil_button_eventos_anteriores">Eventos anteriores</string>
    <string name="preco_nulo_unidade">R$ 0.00</string>
	<string name="ok">OK</string>
	<string name="futuros">Pesquise por eventos futuros</string>
	<string name="futuros_create">Crie o evento a partir de hoje</string>
	<string name="inicio_termino">O término deve ser após o início</string>
	<string name="opcional">(Opcional)</string>
    <string name="perfil_votos_default">0</string>
    <string name="descricao_evento">Descrição do Evento</string>
    <string name="foraPesquisaTxt">Nenhum evento foi encontrado pela sua pesquisa.</string>
    <string name="foraColisaoTxt">Mais de um endereço foi encontrado pela sua pesquisa. Escolha um dos endereços abaixo.</string>
    <string name="sobre_evento">Descreva sobre o evento</string>
    <string name="enviar">Enviar</string>
    <string name="terminar_jogo">Terminar Jogo</string>
    <string name="editar">Editar Evento</string>
    <string name="beginVote">Iniciar Votação</string>
    <string name="inviteFriends">Convidar Amigos</string>
    <string name="vote">Votar</string>
    <string name="participantes">Participantes</string>
    <string name="share">Compartilhe sua experiência</string>
    <string name="fulano">Fulano</string>
    <string name="voteMe">Como você me classificaria?</string>
    <string name="voteFriend">Escolha alguém e nos diga quantas estrelas de habilidade e como o classificaria.</string>
    <string name="describeEvent">Descreva seu evento.</string>
    <string name="alerta_enterEvent">Participe do evento antes de confirma que chegou no local.</string>
    <string name="alerta_isInEvent">Você já se encontra no local.</string>
    <string name="alerta_jaVotou">As premiações selecionadas já foram dadas por você.</string>
    <string name="alerta_notification">Você não possui convites.</string>
</resources>
