<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/perfil_fundo_branco"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="352dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp" >

                    <ImageView
                        android:id="@+id/perfil_avatar_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/avatar" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/perfil_nome_usuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/perfil_nome_usuario"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/perfil_idade_usuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/perfil_idade_usario" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="352dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end|fill_horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp" >

                    <Button
                        android:id="@+id/perfil_button_mensagens"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/perfil_mensagens"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/perfil_button_quantidade_amigos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/perfil_quantidade_amigos"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/perfil_button_eventos_anteriores"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/perfil_eventos_anteriores"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>