<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inicial_relativelayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/perfil_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="9dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/perfil_fundo_branco"
                android:gravity="left"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/perfil_fundo_branco"
                        android:gravity="left"
                        android:paddingTop="12dp" >

                        <ImageView
                            android:id="@+id/profilePictureView1"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginLeft="12dp"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:id="@+id/perfil_nome_usuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="12dp"
                            android:text="@string/perfil_nome_usuario"
                            android:textColor="#535353"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/perfil_imageview_barraseparar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="12dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/pont" />

                    <LinearLayout
                        android:id="@+id/perfil_relativelayout_primeiralinha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp" >

                        <ImageView
                            android:id="@+id/perfil_imageview_esforcado"
                            android:layout_width="55dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="12dp"
                            android:src="@drawable/icon_esforcado" />

                        <LinearLayout
                            android:id="@+id/perfil_linearlayout_votos_esforcado"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/perfil_textview_votos_esforcado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/perfil_votos_default"
                                android:textColor="#535353"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/perfil_text_esforcado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perfil_esforcado" />
                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/perfil_imageview_genteboa"
                            android:layout_width="55dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_gente_boa" />

                        <LinearLayout
                            android:id="@+id/perfil_linearlayout_votos_genteboa"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="12dp"
                            android:gravity="center"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/perfil_textview_votos_gente_boa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perfil_votos_default"
                                android:textColor="#535353"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/perfil_text_gente_boa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perfil_gente_boa" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/perfil_relativelayout_segundalinha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp" >

                        <ImageView
                            android:id="@+id/perfil_imageview_fairplay"
                            android:layout_width="55dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="12dp"
                            android:src="@drawable/fairplay" />

                        <LinearLayout
                            android:id="@+id/perfil_linearlayout_votos_fairplay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/perfil_textview_votos_fairplay"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perfil_votos_default"
                                android:textColor="#535353"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/perfil_textview_fairplay"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perfil_fair_play" />
                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/perfil_imageview_jogatime"
                            android:layout_width="55dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_jogaprotime" />

                        <LinearLayout
                            android:id="@+id/perfil_linearlayout_votos_jogatime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/perfil_textview_votos_jogatime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perfil_votos_default"
                                android:textColor="#535353"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/perfil_textview_jogatime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perfil_joga_pro_time" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="12dp" >

                        <Button
                            android:id="@+id/perfil_button_amigos"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="15"
                            android:background="@drawable/perfil_buttons"
                            android:text="@string/perfil_button_num_amigos"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/perfil_imageview_separadorButton"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/pont2" />

                        <Button
                            android:id="@+id/perfil_button_eventosAnteriores"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="6"
                            android:background="@drawable/perfil_buttons"
                            android:text="@string/perfil_button_eventos_anteriores"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <br.com.JoinAndPlay.gridViewWithScroll.ExpandableHeightGridView
                    android:id="@+id/perfil_gridview_esportes_expandable"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:background="@color/cinzafundo"
                    android:clickable="false"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:horizontalSpacing="10dp"
                    android:listSelector="#00000000"
                    android:longClickable="false"
                    android:numColumns="2"
                    android:paddingTop="12dp"
                    android:verticalSpacing="10dp" >
                </br.com.JoinAndPlay.gridViewWithScroll.ExpandableHeightGridView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>