<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="154dp"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:longClickable="false"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingRight="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/perfil_campo_esporte"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="matrix"
                android:src="@drawable/futebol" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/perfil_nome_esporte"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:background="@drawable/perfil_campo_branco"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/perfil_nivel_do_jogador"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/perfil_nivel_do_jogador" />

        <LinearLayout
            android:id="@+id/perfil_layout_stars"
            android:orientation="horizontal"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_weight="1" >
		<!-- HARCODED STARTS
            <ImageView
                android:id="@+id/imageView2"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star1" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star1" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/perfil_num_partidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/perfil_partidas_jogadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/perfil_partidas_jogadas" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
